--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "firebase": "^5.5.9",
+    "firebase-tools": "^6.5.0",
     "material-design-icons-iconfont": "^4.0.3",
     "register-service-worker": "^1.5.2",
     "roboto-fontface": "*",
